<resources>
    <string name="app_name">Abhaya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account?Register here!</string>
    <string name="register">Register</string>
    <string name="registered_already_login_here">Registered Already? Login Here!</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="logout">Logout</string>
    <string name="title_activity_regbtn">regbtn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="default_web_client_id">445936672141-8d935mpgtlsou2cofjfs7cm2jnupg4gv.apps.googleusercontent.com</string>
    <string name="widget_name">Quick alerts</string>
</resources>



